Update hint text in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -64,7 +64,7 @@
       <a href="images/9.jpeg"><img src="images/9.jpeg" alt=""></a>
     </div>
 
-    <div class="hint">Tap a photo to open. Swipe/arrow through on mobile/desktop.</div>
+    <div class="hint">Tap a photo to open. Swipe/arrow through :) </div>
   </div>
 
   <div class="lb" id="lb" aria-hidden="true">
